--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,10 @@ tasks.test {
 }
 
 tasks{
+    wrapper(type: Wrapper) {
+        gradleVersion = '4.1'
+    }
+
     test{
         jacoco {
             excludes = ['']
