--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,11 @@ plugins {
     id("com.diffplug.spotless") version "6.25.0"
     id("org.gradle.test-retry") version("1.5.6")
     id("maven-publish")
+    id("application")
 }
 
 group = "org.validation.framework"
 version = "1.0-SNAPSHOT"
-
-mainClassName = "org.sanjiv.requestvalidator.StartUp"
 
 repositories {
     mavenCentral()
@@ -101,6 +100,9 @@ tasks{
             endWithNewline()
             googleJavaFormat("1.17.0")
         }
+    }
+    application {
+        mainClassName = "org.sanjiv.requestvalidator.StartUp"
     }
 
     build{
